# precodahora

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  debug_cookies.py  docker-compose.yml  pyproject.toml
app/: config.py  main.py  rate_limiting.py  redis_client.py
app/routers/: precos.py
app/schemas/: errors.py  precos.py
app/services/: precos.py
docs/: API.md  ARCHITECTURE.md  CODE_QUALITY.md  DAILY_WORKFLOW.md  OPERATIONS.md
tests/: test_api_integration.py  test_api_precos.py  test_ops_endpoints.py  test_rate_limiting_redis.py  test_schemas_precos.py  test_services_precos.py  test_services_precos_cache.py
